# dip-project

./: CMakeLists.txt  README.md  generate_image.m  main.cpp
